[project]
name = "bigdata-energy-consumption-generation-prices-and-weather"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "pmdarima>=2.1.1",
    "prophet>=1.3.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
